syntax = "proto2";

package com.project.protobufnetty;
option optimize_for = SPEED;//加快解码的速度
option java_package = "com.project.protobufnetty";
option java_outer_classname = "MyDataInfo";

message Mymessage{
    enum MessageType{
      PersonType =1;
      DogType=2;
      CatType=3;
    }
    required MessageType message_type = 1;
    //同一时刻只能有一个对象被实例化
    oneof message_oneof{
      Person person =2;
      Dog dog = 3;
      Cat cat = 4;
    }
}


message Person{
  required string name = 1;
  optional int32 id = 2;
  optional string address = 3;
}
message Dog{
  required string name = 1;
  optional int32 age = 2;

}
message Cat{
  required string name = 1;
  optional string sex = 2;

}
